// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages snapshot tests displays error page 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <p>
      404 Cheif
    </p>
  </header>
</div>
`;

exports[`pages snapshot tests team search 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <p>
      TeamSearch
    </p>
  </header>
</div>
`;
